@@ -913,6 +913,8 @@ body {
 
 <p><strong>quest_item</strong> | <code>bool</code> | If true, this item is a quest item and can not be dropped, stashed, or sold.</p>
 
+<p><strong>no_stash</strong> | <code>bool</code> | If true, this item can not be stashed.</p>
+
 <hr />
 
 <h4>ItemManager: Types</h4>
